# NLP_ai_langchain_huggingface

./: 15-Bag+Of+Words+Practical.ipynb  README.md  main.py  pyproject.toml
03lemmitizarion/: lemm.ipynb
04stop_words/: stop_words.ipynb
05pos/: parts_of_speech.ipynb
06named_entity_recognition/: ner.ipynb
NLP/01TextProcessing/02stemming_prac/: stem_lemm.ipynb
NLP/01TextProcessing/04stop_words/: stop_words.ipynb
NLP/02WordEmbedding/: readme.md
NLP/02WordEmbedding/06named_entity_recognition/: ner.ipynb
NLP/02WordEmbedding/07_bag_of_words/: bow.ipynb
NLP/02WordEmbedding/08n_gram/: n_gram.ipynb
NLP/02WordEmbedding/09tf_iddf/: tf_idf.ipynb
NLP/02WordEmbedding/10_word_embedding/: cbow_word_embed.ipynb  word_embed.ipynb
NLP/02WordEmbedding/11_skip_gram/: skipgram.ipynb
NLP/smsapamcollection/: bestpractice.md  readme.md  spamclassifier_bow.ipynb
stemming_prac/: stem_lemm.ipynb
tokenise/: tokenise.ipynb
